# analysis-instagram-piif2024

./: .gitignore  .gitmodules  README.md  config.sh  pyproject.toml
.github/: dependabot.yml
conf/: config.yaml
githooks/: post-checkout  pre-commit  pre-push
src/project/cli/: __init__.py  help.py
src/project/data/: make_dataset.py
tests/: test_project.py
tests/data/: test_make_dataset.py
